--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -212,25 +212,40 @@ p-value of the observed $D_n$, however, note that the null distribution is not
 the same as that in the standard
 case~\eqref{eq:ks_standard}. If the same null distribution were used, one would
 be testing a different~$H_0$ that the random sample comes from the specific
-member distribution~$F_{\hat\theta}$ instead of the family~$F_\theta$.
+member distribution~$F_{\hat\theta_n}$ instead of the family~$F_\theta$.
 
 
 The consequence of using the wrong null distribution for the KS statistic $D_n$
 in~\eqref{eq:ks_fitted} can be illustrated through a simple simulation study. A
-random sample $X_1, \ldots, X_n$ was generated from the standard normal
-distribution with sample size $n = 100$. The sample mean and sample standard
+random sample $X_1, \ldots, X_n$ was generated from a normal
+distribution with both mean and variance parameters set equal to 8 ($N(8,8)$), 
+and sample size $n = 200$. The sample mean and sample standard
 deviation were used as $\hat\theta_n$. The p-value of the test
 statistic~$D_n$ in~\eqref{eq:ks_fitted} was obtained by naively calling the
 \texttt{ks.test()} function in~R with the fitted normal distribution as the
 hypothesized distribution. That is, the hypothesized distribution was
 $N(\bar X, s^2)$ where $\bar X$ is the sample mean and $s^2$ is the sample
-variance. This experiment was repeated 1000 times and the histogram of the
-1000 p-values are displayed in Figure~\ref{fig:pp_f}. If the test were
+variance. This experiment was repeated 1000 times and the 
+probability-probability plot (PP-plot) of the 1000 p-values are displayed in the 
+top left plot of Figure~\ref{fig:pp_f}. If the test were
 valid, the p-values would be uniformly distributed in the unit
-interval. Clearly, the pattern of the 1000 p-values are very different from what
+interval and the points in the PP plot would fall along the diagonal line. 
+Clearly, the distribution of the 1000 p-values are very different from what
 one would expect to see from 1000 draws from the standard uniform
-distribution.
+distribution.  
 
+We similarly considered random samples $X_1, \ldots, X_n$ 
+generated from a gamma distribution with shape and scale parameters 8 and 1, 
+respectively ($\Gamma(8,1)$), and sample size $n=200$. These parameter values 
+were selected so that mean and variance of the normal and gamma distributions 
+in the simulations are the same. Likewise, the p-value of the test 
+statistic~$D_n$ in~\eqref{eq:ks_fitted} was obtained by naively calling the
+\texttt{ks.test()} function in~R with the fitted gamma distribution as the
+hypothesized distribution using the shape and scale \eds{maximum likelihood 
+estimates}. The PP plot of the p-values from 1000 replications of this 
+experiment are displayed in the bottom left plot of Figure~\ref{fig:pp_f}. The
+p-values are again non-uniformly distributed due to the use of the 
+estimated parameters when specifying the null distribution.
 
 To fix the problem, parametric bootstrap can be used to approximate the null
 distribution of the test statistic~$D_n$:
@@ -258,10 +273,17 @@ The p-value of $D_n$ is approximated by the proportion of the $D_n^*$
 statistics that are
 greater than or equal to~$D_n$.
 
+In the same simulation study, p-values were obtained for the 1000 replicates
+from the parametric bootstrap procedures. The top and bottom right plots of 
+Figure~\ref{fig:pp_f} display the PP-plots of the 1000
+p-values from the normal and gamma data generation scenarios,
+respectively. This time, all points fall along the diagonal lines implying that
+the p-values are coming from standard uniform distributions.
 
 Nonparametric bootstrap can also be used to approximate the null distribution
-of the test statistic except that a bias correction is needed
-\citet{babu2004goodness}. Details of the nonparametric bootstrap procedure is
+of the test statistic in~\eqref{eq:ks_fitted} except that a bias correction is 
+needed
+\citep{babu2004goodness}. Details of the nonparametric bootstrap procedure are
 in the Appendix. The results from nonparametric bootstrap are similar to those
 from the parametric bootstrap and, hence, are omitted.
 
@@ -269,20 +291,15 @@ from the parametric bootstrap and, hence, are omitted.
 \begin{figure}[tbp]
   \centering
   \includegraphics[width=.5\textwidth]{pp_f.pdf}
-  \caption{PP-plot for the p-values obtained from KS tests with unspecified
-    parameters with sample size $n = 200$ based on 1000 replicats. The data
+  \caption{PP-plots for the p-values obtained from KS tests with unspecified
+    parameters with sample size $n = 200$ based on 1000 replicates. The data
     generating models were $N(8, 8)$ and $\Gamma(8, 1)$.
   }
   \label{fig:pp_f}
 \end{figure}
 
 
-In the same simulation study, p-values were obtained for the 1000 replicates
-with both the parametric and nonparametric bootstrap procedures. The center and
-right panels of Figure~\ref{fig:pp_f} display the histograms of the 1000
-p-values from the parametric and nonparametric bootstrap procedures,
-respectively. This time, both samples of p-values appear to come from
-standard uniform distributions.
+
 
 \section{Serially Dependent Data}
 \label{sec:dependence}
@@ -306,19 +323,21 @@ is negative, in which case, the test is conservative.
 
 The invalidity of the standard statistic for serially dependent data can be
 illustrated by a simple simulation study. Consider a first-order autoregressive
-or AR(1) model with marginal standard normal distribution. For each AR
-coefficient $\psi \in \{-0.3, 0.2, 0.1, 0, 0.1, 0.2, 0.3\}$, we generated 1000
+or AR(1) model with marginal normal (or gamma) distribution. For each AR
+coefficient $\psi \in \{-0.3, 0.1, 0.1, 0.3\}$, we generated 1000
 series of length 100. For each series, we applied the KS statistic
-in~\eqref{eq:ks_standard} to test $H_0$ that the $X_i$'s follow $N(0, 1)$
-marginally. The histograms of the p-values from $1000$ replicates for all the
-$\psi$ values are displayed in Figure~\ref{fig:pp_s}. When
-$\phi \ne 0$, the histograms do not look likely to be generated from a standard
-uniform distribution. Positive $\psi$ values led to p-values with a distribution
-function higher than the standard uniform distribution function and, hence,
-conservative tests. Negative $\psi$ values led to p-values with a distribution
-function lower than the standard uniform distribution and, hence, liberal
-tests. The larger the magnitude of
+in~\eqref{eq:ks_standard} to test $H_0$ that the $X_i$'s follow $N(8, 8)$ (or 
+$\Gamma(8,1)$ marginally. The PP-plots of the p-values from $1000$ replicates 
+for all the $\psi$ values are displayed in Figure~\ref{fig:pp_s}. When
+$\phi$ diverges from 0, the p-values do not look likely to be generated from a 
+standard uniform distributions. Positive $\psi$ values led to p-values with a 
+distribution function higher than the standard uniform distribution function and, 
+hence, conservative tests. Negative $\psi$ values led to p-values with a 
+distributionfunction lower than the standard uniform distribution and, hence, 
+liberal tests. \eds{check previous statement, not consistent with beginning of 
+this section} The larger the magnitude of
 $\psi$, the bigger the deviation from the desired level.
+\eds{check that $\psi=.1$ plots are really from .1 and not 0}
 
 \begin{figure}[tbp]
   \centering
